# checkpointflow

./: .gitignore  .review-input.json  .tmp-review-diff.patch  CLAUDE.md  CONTRIBUTING.md  README.md  REFACTOR.md  checkpointflow-guide.md  checkpointflow-phase1-implementation-plan.md  checkpointflow-prd.md  pyproject.toml
.checkpointflow/: pr-create.yaml  project-health.yaml  release.yaml
.claude/: settings.json  settings.local.json
.githooks/: _lib.sh  pre-commit  pre-push
.review-artifacts/: arch-callback.json  architecture-review-report.json  architecture-review-request.json  confirm-event.json  decision-callback.json  maint-callback.json  maintainability-review-report.json  maintainability-review-request.json  release-input.json  review_bundle.json  review_context.json  security-callback.json  security-review-report.json  security-review-request.json  testing-callback.json  testing-review-report.json  testing-review-request.json
examples/: agent-decision.yaml  collaborative_feature_pipeline.yaml  conditional-steps.yaml  cpf-quiz.yaml  cpf_feature_development.yaml  input.json  publish-confluence-change.yaml  resume-event.json  simple-echo.yaml  waiting-envelope.json
gui/: index.html  package-lock.json  package.json  vite.config.ts
schemas/: checkpointflow-run-envelope.schema.json  checkpointflow.schema.json
scripts/: bump_version.py  get_version.py  install_git_hooks.py
tests/: conftest.py  test_bugfixes_round2.py  test_cli_cancel.py  test_cli_flows.py  test_cli_guide_init.py  test_cli_resume.py  test_cli_run.py  test_cli_smoke.py  test_cli_status_inspect.py  test_cli_validate.py  test_coverage_gaps.py  test_cwd_and_defaults.py  test_delete_run.py  test_discovery.py  test_dispatch.py  test_evaluator.py  test_feedback_fixes.py  test_gui_bulk_delete.py  test_gui_discover.py  test_gui_parse_workflow.py  test_gui_server.py  test_models_envelope.py  test_models_errors.py  test_models_state.py  test_models_workflow.py  test_persistence_store.py  test_queries.py  test_runner.py  test_runner_new_steps.py  test_runner_resume.py  test_schema.py  test_security_fixes.py  test_step_api.py  test_step_await_event.py  test_step_cli.py  test_step_end.py  test_step_foreach.py  test_step_parallel.py  test_step_switch.py  test_step_workflow_ref.py
workflows/: clean-install-test.yaml  dependency-update.yaml  release.yaml  (+1 more)
(+80 files in other folders)
